feat: add specialists page

--- a/src/main/pages/index/index.html
+++ b/src/main/pages/index/index.html
@@ -26,7 +26,7 @@
                                 </div>
                                 <picture class="article-preview__picture">
                                     <source srcset="./assets/images/pic-1-mob.png" media="(max-width: 1399px)">
-                                    <img src="./assets/images/pic-1.png" alt="">
+                                    <img src="./assets/images/pic-1.jpg" alt="">
                                 </picture>
                             </article>
                         </div>
