feat: add pages

--- a/src/main/pages/services-detail/services-detail.html
+++ b/src/main/pages/services-detail/services-detail.html
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                         <div class="grid__item grid__item--1 mob-hidden"></div>
-                        <div class="grid__item grid__item--7 grid__item-mob--4">
+                        <div class="grid__item grid__item--flex-row grid__item--7 grid__item-mob--4">
                             <picture class="intro__picture picture-backdrop">
                                 <img class="picture-backdrop__img" src="./assets/images/pic-9.png" alt="">
                                 <img class="picture-backdrop__img picture-backdrop__img--backdrop"
