feat: update form js

--- a/src/main/pages/index/index.html
+++ b/src/main/pages/index/index.html
@@ -849,7 +849,7 @@
                                         <h4 class="article-review__head">
                                             Лазерная коррекция зрения
                                         </h4>
-                                        <p class="article-review__text">
+                                        <p class="article-review__text" data-text-content>
                                             Коллектив центра состоит из высококвалифицированных врачей-офтальмологов и
                                             офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                             заболеваний глаз Коллектив центра состоит из высококвалифицированных
@@ -857,7 +857,7 @@
                                             офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                             заболеваний глаз
                                         </p>
-                                        <a href="#" class="show-more show-more--small">
+                                        <a href="#" class="show-more show-more--small" data-show-more>
                                             <span>Читать подробнее</span>
                                             <svg class="show-more__icon">
                                                 <use xlink:href="./assets/sprite.svg#icon-arrow-down"></use>
@@ -908,7 +908,7 @@
                                         <h4 class="article-review__head">
                                             Лазерная коррекция зрения
                                         </h4>
-                                        <p class="article-review__text">
+                                        <p class="article-review__text" data-text-content>
                                             Коллектив центра состоит из высококвалифицированных врачей-офтальмологов и
                                             офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                             заболеваний глаз Коллектив центра состоит из высококвалифицированных
@@ -916,7 +916,7 @@
                                             офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                             заболеваний глаз
                                         </p>
-                                        <a href="#" class="show-more show-more--small">
+                                        <a href="#" class="show-more show-more--small" data-show-more>
                                             <span>Читать подробнее</span>
                                             <svg class="show-more__icon">
                                                 <use xlink:href="./assets/sprite.svg#icon-arrow-down"></use>
@@ -967,7 +967,7 @@
                                         <h4 class="article-review__head">
                                             Лазерная коррекция зрения
                                         </h4>
-                                        <p class="article-review__text">
+                                        <p class="article-review__text" data-text-content>
                                             Коллектив центра состоит из высококвалифицированных врачей-офтальмологов и
                                             офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                             заболеваний глаз Коллектив центра состоит из высококвалифицированных
@@ -975,7 +975,7 @@
                                             офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                             заболеваний глаз
                                         </p>
-                                        <a href="#" class="show-more show-more--small">
+                                        <a href="#" class="show-more show-more--small" data-show-more>
                                             <span>Читать подробнее</span>
                                             <svg class="show-more__icon">
                                                 <use xlink:href="./assets/sprite.svg#icon-arrow-down"></use>
@@ -1026,7 +1026,7 @@
                                         <h4 class="article-review__head">
                                             Лазерная коррекция зрения
                                         </h4>
-                                        <p class="article-review__text">
+                                        <p class="article-review__text" data-text-content>
                                             Коллектив центра состоит из высококвалифицированных врачей-офтальмологов и
                                             офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                             заболеваний глаз Коллектив центра состоит из высококвалифицированных
@@ -1034,7 +1034,7 @@
                                             офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                             заболеваний глаз
                                         </p>
-                                        <a href="#" class="show-more show-more--small">
+                                        <a href="#" class="show-more show-more--small" data-show-more>
                                             <span>Читать подробнее</span>
                                             <svg class="show-more__icon">
                                                 <use xlink:href="./assets/sprite.svg#icon-arrow-down"></use>
@@ -1068,15 +1068,15 @@
                 <form action="#" class="form">
                     <h2 class="form__title title title--small">Запишитесь на консультацию</h2>
                     <label class="form__item">
-                        <input class="input" type="text" placeholder="Ваше имя*">
+                        <input class="input" type="text" placeholder="Ваше имя*" name="NAME">
                     </label>
                     <label class="form__item">
-                        <input class="input" type="tel" placeholder="Номер телефона*">
+                        <input class="input" type="tel" placeholder="Номер телефона*" name="TEL">
                     </label>
-                    <textarea class="input input--area" placeholder="Ваш комментарий"></textarea>
+                    <textarea class="input input--area" placeholder="Ваш комментарий" name="COMMENT"></textarea>
                     <button class="button button--big" type="submit">Записаться на консультацию</button>
                     <label class="form__accept">
-                        <input class="checkbox" type="checkbox">
+                        <input class="checkbox" type="checkbox" data-accept-form>
                         <span>Нажимая кнопку вы соглашаетесь с условиями <a
                             href="#">Политики конфиденциальности</a></span>
                     </label>
