--- a/src/main/pages/contacts/contacts.html
+++ b/src/main/pages/contacts/contacts.html
@@ -66,15 +66,15 @@
                 <form action="#" class="form">
                     <h2 class="form__title title title--small">Запишитесь на консультацию</h2>
                     <label class="form__item">
-                        <input class="input" type="text" placeholder="Ваше имя*">
+                        <input class="input" type="text" placeholder="Ваше имя*" name="NAME">
                     </label>
                     <label class="form__item">
-                        <input class="input" type="tel" placeholder="Номер телефона*">
+                        <input class="input" type="tel" placeholder="Номер телефона*" name="TEL">
                     </label>
-                    <textarea class="input input--area" placeholder="Ваш комментарий"></textarea>
+                    <textarea class="input input--area" placeholder="Ваш комментарий" name="COMMENT"></textarea>
                     <button class="button button--big" type="submit">Записаться на консультацию</button>
                     <label class="form__accept">
-                        <input class="checkbox" type="checkbox">
+                        <input class="checkbox" type="checkbox" data-accept-form>
                         <span>Нажимая кнопку вы соглашаетесь с условиями <a
                             href="#">Политики конфиденциальности</a></span>
                     </label>
