--- a/src/main/widgets/footer/footer.html
+++ b/src/main/widgets/footer/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="container container--no-padding">
+    <div class="container">
         <div class="footer__wrapper">
             <div class="footer__top">
                 <a href="#" class="footer__logo logo">
