--- a/src/main/widgets/footer/footer.html
+++ b/src/main/widgets/footer/footer.html
@@ -3,26 +3,29 @@
         <div class="footer__wrapper">
             <div class="footer__top">
                 <a href="#" class="footer__logo logo">
-                    <img src="./assets/images/logo-white.svg" alt="">
+                    <img src="./assets/images/logo.svg" alt="">
                 </a>
-                <nav class="footer__nav">
-                    <a href="#" class="footer__link">Услуги</a>
-                    <a href="#" class="footer__link">Лечебный кабинет</a>
-                    <a href="#" class="footer__link">О Медцентре</a>
-                    <a href="#" class="footer__link">Специалисты</a>
-                    <a href="#" class="footer__link">Контакты</a>
-                </nav>
-                <p class="footer__address">
-                    <a href="mailto: raduzhka39@gmail.com">raduzhka39@gmail.com</a>
-                    <span>
+                <div class="footer__inner">
+                    <nav class="footer__nav">
+                        <a href="#" class="footer__link">Услуги</a>
+                        <a href="#" class="footer__link">Лечебный кабинет</a>
+                        <a href="#" class="footer__link">О Медцентре</a>
+                        <a href="#" class="footer__link">Специалисты</a>
+                        <a href="#" class="footer__link">Контакты</a>
+                    </nav>
+                    <p class="footer__address">
+                        <a href="mailto: raduzhka39@gmail.com">raduzhka39@gmail.com</a>
+                        <span>
                         г. Калининград,<br>
-                        ул. Инженерная, д. №3, п. I
+                        ул. Инженерная, д. №3, п. I<br>
+                        <a class="footer__primary" href="#">Посмотреть на карте</a>
                     </span>
-                    <strong>
-                        СБ 10:00 - 17:00<br>
-                        ВС 10:00 - 15:00
-                    </strong>
-                </p>
+                        <strong>
+                            СБ 10:00 - 17:00<br>
+                            ВС 10:00 - 15:00
+                        </strong>
+                    </p>
+                </div>
                 <div class="footer__detail">
                     <a href="tel:+74012935151" class="tel-link">+ 7 (4012) 93-51-51</a>
                     <div class="feedback-info">
@@ -31,7 +34,7 @@
                                 <use xlink:href="./assets/sprite.svg#icon-vk"></use>
                             </svg>
                         </a>
-                        <button class="footer__button button button--outline button--light">Записаться на прием</button>
+                        <button class="button button--slim">Записаться на прием</button>
                     </div>
                     <div class="payment-info">
                         <p class="payment-info__text">Принимаем к оплате:</p>
@@ -52,7 +55,7 @@
             <div class="footer__bottom">
                 <p class="footer__text">Лицензия № Л041-23232323/2323</p>
                 <p class="footer__text">© 2024 Радужка - клиника охраны зрения</p>
-                <a class="footer__text" href="#">Политика конфиденциальности</a>
+                <a class="footer__text footer__primary" href="#">Политика конфиденциальности</a>
             </div>
         </div>
     </div>
