--- a/src/main/pages/specialist-single/specialist-single.html
+++ b/src/main/pages/specialist-single/specialist-single.html
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="main-block">
                 <div class="main-block__info">
-                    <div class="tag tag--single">
+                    <div class="main-block__tag tag tag--single">
                         <p class="tag__text">Стаж — 41 год</p>
                     </div>
                     <h1 class="main-block__title title title--main">
