--- a/src/main/pages/specialists/specialists.html
+++ b/src/main/pages/specialists/specialists.html
@@ -28,7 +28,8 @@
                         <span class="breadcrumbs__link">Наши специалисты</span>
                     </div>
                 </div>
-                <div class="main-block__slider slider slider--control slider--pagination slider--pagination-dark" data-slider="default">
+                <div class="main-block__slider slider slider--control slider--pagination slider--pagination-dark"
+                     data-slider="default">
                     <div class="swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -74,8 +75,8 @@
     </section>
     <section class="section pb-110 pbm-60">
         <div class="container">
-            <div class="grid">
-                <div class="grid__item grid__item--4">
+            <div class="grid grid--limit mbm-40">
+                <div class="grid__item grid__item--3">
                     <article class="article-person">
                         <div class="article-person__header">
                             <div class="article-person__tag tag">
@@ -112,7 +113,7 @@
                         </div>
                     </article>
                 </div>
-                <div class="grid__item grid__item--4">
+                <div class="grid__item grid__item--3">
                     <article class="article-person">
                         <div class="article-person__header">
                             <div class="article-person__tag tag">
@@ -149,7 +150,7 @@
                         </div>
                     </article>
                 </div>
-                <div class="grid__item grid__item--4">
+                <div class="grid__item grid__item--3">
                     <article class="article-person">
                         <div class="article-person__header">
                             <div class="article-person__tag tag">
@@ -186,7 +187,7 @@
                         </div>
                     </article>
                 </div>
-                <div class="grid__item grid__item--4">
+                <div class="grid__item grid__item--3">
                     <article class="article-person">
                         <div class="article-person__header">
                             <div class="article-person__tag tag">
@@ -223,7 +224,8 @@
                         </div>
                     </article>
                 </div>
-                <div class="grid__item grid__item--4">
+                
+                <div class="grid__item grid__item--3">
                     <article class="article-person">
                         <div class="article-person__header">
                             <div class="article-person__tag tag">
@@ -260,7 +262,7 @@
                         </div>
                     </article>
                 </div>
-                <div class="grid__item grid__item--4">
+                <div class="grid__item grid__item--3">
                     <article class="article-person">
                         <div class="article-person__header">
                             <div class="article-person__tag tag">
@@ -297,7 +299,7 @@
                         </div>
                     </article>
                 </div>
-                <div class="grid__item grid__item--4">
+                <div class="grid__item grid__item--3">
                     <article class="article-person">
                         <div class="article-person__header">
                             <div class="article-person__tag tag">
@@ -334,7 +336,7 @@
                         </div>
                     </article>
                 </div>
-                <div class="grid__item grid__item--4">
+                <div class="grid__item grid__item--3">
                     <article class="article-person">
                         <div class="article-person__header">
                             <div class="article-person__tag tag">
@@ -372,6 +374,7 @@
                     </article>
                 </div>
             </div>
+            <button class="button desktop-hidden centered">Показать еще</button>
         </div>
     </section>
     <div class="main__section">
@@ -405,7 +408,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="slider slider--pagination slider--mob-visible slider--relative" data-slider="cards" data-slides="3">
+                <div class="slider slider--pagination slider--mob-visible slider--relative" data-slider="cards"
+                     data-slides="3">
                     <div class="swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -450,7 +454,8 @@
                                                 Лазерная коррекция зрения
                                             </h4>
                                             <p class="article-review__text" data-text-content>
-                                                Коллектив центра состоит из высококвалифицированных врачей-офтальмологов и
+                                                Коллектив центра состоит из высококвалифицированных врачей-офтальмологов
+                                                и
                                                 офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                                 заболеваний глаз Коллектив центра состоит из высококвалифицированных
                                                 врачей-офтальмологов и
@@ -509,7 +514,8 @@
                                                 Лазерная коррекция зрения
                                             </h4>
                                             <p class="article-review__text" data-text-content>
-                                                Коллектив центра состоит из высококвалифицированных врачей-офтальмологов и
+                                                Коллектив центра состоит из высококвалифицированных врачей-офтальмологов
+                                                и
                                                 офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                                 заболеваний глаз Коллектив центра состоит из высококвалифицированных
                                                 врачей-офтальмологов и
@@ -568,7 +574,8 @@
                                                 Лазерная коррекция зрения
                                             </h4>
                                             <p class="article-review__text" data-text-content>
-                                                Коллектив центра состоит из высококвалифицированных врачей-офтальмологов и
+                                                Коллектив центра состоит из высококвалифицированных врачей-офтальмологов
+                                                и
                                                 офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                                 заболеваний глаз Коллектив центра состоит из высококвалифицированных
                                                 врачей-офтальмологов и
@@ -627,7 +634,8 @@
                                                 Лазерная коррекция зрения
                                             </h4>
                                             <p class="article-review__text" data-text-content>
-                                                Коллектив центра состоит из высококвалифицированных врачей-офтальмологов и
+                                                Коллектив центра состоит из высококвалифицированных врачей-офтальмологов
+                                                и
                                                 офтальмохирургов, обладающих большим опытом в лечении и диагностике
                                                 заболеваний глаз Коллектив центра состоит из высококвалифицированных
                                                 врачей-офтальмологов и
@@ -670,7 +678,7 @@
                             <h2 class="form__title title title--small">Запишитесь на консультацию</h2>
                             <p class="form__text text">
                                 Наш администратор Виктория перезвонит<br>
-                                вам в  течение 5 минут и поможет с выбором
+                                вам в течение 5 минут и поможет с выбором
                             </p>
                         </div>
                         <fieldset class="form__wrapper">
