feat: update mobile menu && modals

--- a/src/main/pages/index/index.html
+++ b/src/main/pages/index/index.html
@@ -18,7 +18,7 @@
                         Наши специалисты помогут Вам диагностировать, в том числе и на раннем этапе, различные
                         заболевания глаз, поставить правильный диагноз и помогут Вам в лечении.
                     </p>
-                    <button class="button">
+                    <button class="button" data-fancybox data-src="#modal-form">
                         Записаться на консультацию
                         <svg class="button__icon button__icon--default">
                             <use xlink:href="./assets/sprite.svg#icon-arrow-pointer"></use>
