--- a/src/main/widgets/hidden/hidden.html
+++ b/src/main/widgets/hidden/hidden.html
@@ -2,32 +2,49 @@
     <div class="modal" id="modal-form">
         <div class="modal__wrapper">
             <form action="#" class="form form--full">
-                <h2 class="form__title title title--small">Запишитесь на консультацию</h2>
-                <label class="form__item">
-                    <input class="input" type="text" placeholder="Ваше имя*" name="NAME">
-                </label>
-                <label class="form__item">
-                    <input class="input" type="tel" placeholder="Номер телефона*" name="TEL">
-                </label>
-                <textarea class="input input--area" placeholder="Ваш комментарий" name="COMMENT"></textarea>
-                <button class="button button--big" type="submit">Записаться на консультацию</button>
+                <div class="form__header">
+                    <h2 class="form__title title title--small">Запишитесь на консультацию</h2>
+                    <p class="form__text text">
+                        Наш администратор Виктория перезвонит<br>
+                        вам в течение 5 минут и поможет с выбором
+                    </p>
+                </div>
+                <fieldset class="form__wrapper">
+                    <label class="form__item">
+                        <input class="input" type="text" placeholder="Ваше имя*" name="NAME">
+                    </label>
+                    <label class="form__item">
+                        <input class="input" type="tel" placeholder="Номер телефона*" name="TEL">
+                    </label>
+                    <textarea class="input input--area" placeholder="Ваш комментарий" name="COMMENT"></textarea>
+                </fieldset>
                 <label class="form__accept">
                     <input class="checkbox" type="checkbox" data-accept-form>
                     <span>Нажимая кнопку вы соглашаетесь с условиями <a
                         href="#">Политики конфиденциальности</a></span>
                 </label>
+                <button class="button button--wide-mob button--slim" type="submit">
+                    Записаться на консультацию
+                    <svg class="button__icon button__icon--default">
+                        <use xlink:href="./assets/sprite.svg#icon-arrow-pointer"></use>
+                    </svg>
+                </button>
             </form>
         </div>
     </div>
     <div class="success-modal" id="success">
         <div class="success-modal__wrapper">
-            <h2 class="success-modal__title title title--small">Благодарим за ваше обращение!</h2>
+            <h2 class="success-modal__title title title--small">Благодарим за ваше<br> обращение!</h2>
             <p class="success-modal__text text">
-                Данные успешно отправлены.<br>
-                Менеджер свяжется с вами в<br>
-                ближайшее время.
+                Данные успешно отправлены. Наш<br>
+                администратор свяжется с вами в ближайшее время.
             </p>
-            <button class="button" data-fancybox-close>Вернуться назад</button>
+            <button class="button button--wide-mob" data-fancybox-close>
+                Вернуться на страницу
+                <svg class="button__icon button__icon--default">
+                    <use xlink:href="./assets/sprite.svg#icon-arrow-pointer"></use>
+                </svg>
+            </button>
         </div>
     </div>
     <div class="success-modal" id="error">
@@ -36,7 +53,12 @@
             <p class="success-modal__text text">
                 Ошибка
             </p>
-            <button class="button" data-fancybox-close>Вернуться назад</button>
+            <button class="button button--wide-mob" data-fancybox-close>
+                Вернуться на страницу
+                <svg class="button__icon button__icon--default">
+                    <use xlink:href="./assets/sprite.svg#icon-arrow-pointer"></use>
+                </svg>
+            </button>
         </div>
     </div>
 </div>
