feat: update data

--- a/src/main/widgets/header/header.html
+++ b/src/main/widgets/header/header.html
@@ -23,7 +23,7 @@
                         <span>ВС 10:00 - 15:00</span>
                     </p>
                 </div>
-                <button class="header__button button mob-hidden" data-fancybox data-src="#success">Записаться на прием</button>
+                <button class="header__button button mob-hidden" data-fancybox data-src="#modal-form">Записаться на прием</button>
                 <div class="header__menu menu">
                     <div class="burger">
                         <span class="burger__item"></span>
