--- a/src/main/pages/about/about.html
+++ b/src/main/pages/about/about.html
@@ -112,6 +112,12 @@
                         <p class="article-feature__text article-feature__text--small">
                             Менеджер ответит на ваши вопросы
                         </p>
+                        <a href="#" class="article-feature__link" data-fancybox data-src="#modal-form">
+                            <span>Задать вопрос</span>
+                            <svg>
+                                <use xlink:href="./assets/sprite.svg#icon-arrow-pointer"></use>
+                            </svg>
+                        </a>
                     </div>
                     <picture class="article-feature__picture">
                         <img class="article-feature__img" src="./assets/images/pic-4.png" alt="">
