--- a/src/main/pages/index/index.html
+++ b/src/main/pages/index/index.html
@@ -4,6 +4,27 @@
 
 <body>
 <%= htmlWebpackPlugin.options.widgets.header %>
+<!--AdFox START-->
+<!--yandex_Drenyash-->
+<!--Площадка: paritest / * / *-->
+<!--Тип баннера: 100%x100% Turbo-->
+<!--Расположение: верх страницы-->
+<div id="adfox_149487961538858600"></div>
+<script>
+    window.yaContextCb.push(()=>{
+        Ya.adfoxCode.create({
+            ownerId: 168627,
+            containerId: 'adfox_149487961538858600',
+            params: {
+                p1: 'bwfgn',
+                p2: 'ekwx',
+                pfc: 'bmtev',
+                pfb: 'eokcn'
+            }
+        })
+    })
+</script>
+
 <main class="main">
     <section class="section section--fluid mb-50 mbm-70">
         <div class="container">
